--- a/S01-02_Variables_Conditionals/S02_Conditions.ipynb
+++ b/S01-02_Variables_Conditionals/S02_Conditions.ipynb
@@ -200,7 +200,216 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user_name = \"user1\"\n",
+    "password = \"123\"\n",
+    "new_use_name = input(\"user name: \")\n",
+    "new_password = input(\"password: \")\n",
+    "if user_name == new_use_name and password == new_password:\n",
+    "    print(\"Login!\")\n",
+    "elif user_name != new_use_name and password != new_password:\n",
+    "    print(\"Error! password, user name\")\n",
+    "elif user_name != new_use_name and password == new_password: # is not correct\n",
+    "    print(\"Error! use name\")\n",
+    "else:\n",
+    "    print(\"Error! Password\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Login!\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_name = \"user1\"\n",
+    "password = \"123\"\n",
+    "new_use_name = input(\"user name: \")\n",
+    "new_password = input(\"password: \")\n",
+    "if user_name == new_use_name and password == new_password:\n",
+    "    print(\"Login!\")\n",
+    "elif user_name != new_use_name and password != new_password:\n",
+    "    print(\"Error! password, user name\")\n",
+    "elif user_name != new_use_name:\n",
+    "    print(\"Error! use name\")\n",
+    "else:\n",
+    "    print(\"Error! Password\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## limit: scoore >= 0 and score <= 20 \n",
+    "## score <= 20 and score >= 17 ===> A++\n",
+    "## score < 17 and score >= 15 ===> A+\n",
+    "## score < 15 and score >= 10 ===> A\n",
+    "## score < 10 and score >= 0 ===> B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = 18 # 1\n",
+    "if score > 20 or score < 0: # False  2\n",
+    "    print(\"out of range!\")\n",
+    "elif score >= 17: # True  3\n",
+    "    print(\"A++\")  # A++ 4\n",
+    "elif score >= 15:\n",
+    "    print(\"A+\")\n",
+    "elif score >= 10:\n",
+    "    print(\"A\")\n",
+    "else:\n",
+    "    print(\"B\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## this method is not correct\n",
+    "num1 = 23\n",
+    "num2 = 34\n",
+    "num3 = 71\n",
+    "if num1 > num2 and num1 > num3:\n",
+    "    print(num1)\n",
+    "elif num2 > num1 and num2 > num3:\n",
+    "    print(num2)\n",
+    "else:\n",
+    "    print(num3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "## this method is not correct\n",
+    "num1 = 23\n",
+    "num2 = 34\n",
+    "num3 = 71\n",
+    "\n",
+    "max_num = num1 # max_num = 23\n",
+    "if num2 > max_num: # 34 > 23 ???? True \n",
+    "    max_num = num2  # max_num = 34\n",
+    "elif num3 > max_num:\n",
+    "    max_num = num3\n",
+    "print(max_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71\n"
+     ]
+    }
+   ],
+   "source": [
+    "## this method is not correct\n",
+    "num1 = 23\n",
+    "num2 = 34\n",
+    "num3 = 71\n",
+    "\n",
+    "max_num = num1 # max_num = 23\n",
+    "if num2 > max_num: # 34 > 23 ???? True \n",
+    "    max_num = num2  # max_num = 34\n",
+    "if num3 > max_num: # 71 > 34 ====> True\n",
+    "    max_num = num3 # max_num = 71\n",
+    "print(max_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FizzBazz\n",
+    "# number % 2 == 0 ====> F\n",
+    "# number % 3 == 0 ====> B\n",
+    "# number % 2 == 0 and number % 3 == 0 ====> FB\n",
+    "# else ======> number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\n"
+     ]
+    }
+   ],
+   "source": [
+    "## is not correct\n",
+    "number = 6\n",
+    "if number % 2 == 0: # 6 % 2 == 0    True\n",
+    "    print(\"F\")\n",
+    "elif number % 3 == 0:\n",
+    "    print(\"B\")\n",
+    "elif number % 2 == 0 and number % 3 == 0:\n",
+    "    print(\"FB\")\n",
+    "else:\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FB\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 6\n",
+    "if number % 2 == 0 and number % 3 == 0:\n",
+    "    print(\"FB\")\n",
+    "elif number % 2 == 0: \n",
+    "    print(\"F\")\n",
+    "elif number % 3 == 0:\n",
+    "    print(\"B\")\n",
+    "else:\n",
+    "    print(number)"
+   ]
   }
  ],
  "metadata": {
