--- a/S01-02_Variables_Conditionals/S01_Basic.ipynb
+++ b/S01-02_Variables_Conditionals/S01_Basic.ipynb
@@ -4,13 +4,628 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Session 01"
+    "#### Session 01(Basic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "314.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = 12\n",
+    "p = 3.14\n",
+    "area = p * r ** 2\n",
+    "print(area)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Var name\n",
+    "score = 10\n",
+    "speed = 25\n",
+    "pythonscore = 16.8\n",
+    "### camelCase\n",
+    "score = 14\n",
+    "pythonScore = 16.8\n",
+    "### PascalCase\n",
+    "Score = 14\n",
+    "PythonScore = 16.8\n",
+    "### snake_case\n",
+    "score = 14\n",
+    "python_score = 16.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Var type\n",
+    "# int, float, str, bool\n",
+    "## int\n",
+    "num1 = 14\n",
+    "\n",
+    "## float\n",
+    "num2 = 15.8\n",
+    "num3 = 15.0\n",
+    "num4 = 16. \n",
+    "\n",
+    "## str\n",
+    "name = 'python'\n",
+    "phoneNumber = \"09123456\"\n",
+    "number = \"123\"\n",
+    "\n",
+    "## bool\n",
+    "var1 = True \n",
+    "var2 = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "num2 = 4. \n",
+    "str1 = \"True\"\n",
+    "## type()\n",
+    "t1 = type(num2)\n",
+    "print(t1)\n",
+    "\n",
+    "t2 = type(str1)\n",
+    "print(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "20\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 14\n",
+    "print(y)\n",
+    "y = 20\n",
+    "print(y)\n",
+    "y = x\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "## +=, -=, *=, /=\n",
+    "x = 10\n",
+    "x = x + 2\n",
+    "print(x)\n",
+    "x += 2\n",
+    "x -= 2\n",
+    "x = x - 2\n",
+    "x *= 2\n",
+    "x /= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "x = x + 2\n",
+    "x += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "## int, float\n",
+    "## +, -, *, /, //, **, %\n",
+    "## // ====> int\n",
+    "## / ====> float\n",
+    "x = 4\n",
+    "y = 2\n",
+    "result = x // y \n",
+    "print(result) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "## >, <, >=, <=, ==, !=    ====> boolean\n",
+    "num1 = \"python\"\n",
+    "num2 = \"python\"\n",
+    "print(num1 == num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "## or, and, not\n",
+    "num1 = 20\n",
+    "num2 = 30\n",
+    "num3 = 30\n",
+    "##           False         True\n",
+    "result = num1 > num2 and num1 < num3 \n",
+    "## True: all conditions be True\n",
+    "print(result)\n",
+    "\n",
+    "result = num1 > num2 or num1 < num3\n",
+    "## False: all conditions be False\n",
+    "print(result)\n",
+    "\n",
+    "flag = False\n",
+    "print(not(num1 > num2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 12\n",
+    "y = \"12\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## int(), float(), str(), bool()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "17\n",
+      "15\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## int ====> int()\n",
+    "num1 = \"12\"\n",
+    "print(type(num1))\n",
+    "num1 = int(num1)\n",
+    "print(type(num1))\n",
+    "print(num1 + 5)\n",
+    "\n",
+    "num2 = 15.7\n",
+    "num2 = int(num2)\n",
+    "print(num2)\n",
+    "\n",
+    "flag1 = False\n",
+    "flag1 = int(flag1)\n",
+    "print(flag1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '12a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_36094/1177686605.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnum1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"12a\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnum1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '12a'"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = \"12a\"\n",
+    "print(type(num1))\n",
+    "num1 = int(num1)\n",
+    "print(type(num1))\n",
+    "print(num1 + 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '12.5'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_36094/2662931977.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnum1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"12.5\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnum1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '12.5'"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = \"12.5\"\n",
+    "print(type(num1))\n",
+    "num1 = int(num1)\n",
+    "print(type(num1))\n",
+    "print(num1 + 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0 12.6\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '12a'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_36094/2944711036.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mnum2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mnum3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '12a'"
+     ]
+    }
+   ],
+   "source": [
+    "## float()\n",
+    "num1 = \"12\"\n",
+    "num2 = \"12.6\"\n",
+    "num3 = \"12a\"\n",
+    "num1 = float(num1)\n",
+    "num2 = float(num2)\n",
+    "print(num1, num2)\n",
+    "num3 = float(num3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## float()\n",
+    "num1 = 12\n",
+    "num1 = float(num1)\n",
+    "print(num1)\n",
+    "\n",
+    "flag = True\n",
+    "flag = float(flag)\n",
+    "print(flag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "num2 = \"12.6\"\n",
+    "#num2 = float(num2)\n",
+    "#num2 = int(num2)\n",
+    "num2 = int(float(num2))\n",
+    "print(num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## str()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "## bool()\n",
+    "num1 = -20\n",
+    "num2 = 0\n",
+    "num1 = bool(num1)\n",
+    "num2 = bool(num2)\n",
+    "print(num1, num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = -2.0\n",
+    "num2 = 0.0\n",
+    "num1 = bool(num1)\n",
+    "num2 = bool(num2)\n",
+    "print(num1, num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1 = \"True\"\n",
+    "var2 = \"False\"\n",
+    "var3 = \"\"\n",
+    "var1 = bool(var1)\n",
+    "var2 = bool(var2)\n",
+    "var3 = bool(var3)\n",
+    "print(var1, var2, var3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## int ====> 0\n",
+    "## float ====> 0.0\n",
+    "## str ====> \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = 12\n",
+    "num2 = 16\n",
+    "num3 = 18\n",
+    "##           False           True\n",
+    "result = num1 > num2 or num1 < num3 or num1 == num3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 10\n",
+    "num2 = 20\n",
+    "##    True\n",
+    "print(num1 or num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "c_color = \"blue\"\n",
+    "d_color = \"black\"\n",
+    "##      True\n",
+    "print(c_color or d_color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = \"\"\n",
+    "#      False     False\n",
+    "start = start or 0\n",
+    "print(start)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
