--- a/S12_S13_Set_Tuple_ErrorHandling/S13_ErrorHandling.ipynb
+++ b/S12_S13_Set_Tuple_ErrorHandling/S13_ErrorHandling.ipynb
@@ -483,10 +483,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def login(username, password):\n",
+    "  if not username or not password:\n",
+    "    raise ValueError(\"username and password are required\")\n",
+    "  print(\"logged in\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "username and password are required\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  login(\"test\", \"\")\n",
+    "except ValueError as e:\n",
+    "  print(e)"
+   ]
   }
  ],
  "metadata": {
